--- a/archives.html
+++ b/archives.html
@@ -1,90 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700' rel='stylesheet' type='text/css' />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
-    <title> Archive | DevPad </title>
+<head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DevPad</title>
+        <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
+        <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
-    <link rel="stylesheet" href="http://xr09.github.io/theme/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="http://xr09.github.io/theme/css/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="http://xr09.github.io/theme/css/font-awesome.css" type="text/css"/>
-  </head>
-  <body>
-    <div class=container>
-<div class="header">
-    <a href="http://xr09.github.io/">DevPad</a> <span class="muted">clean code, good karma</span>
-</div>
+        <!--[if IE]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+</head>
 
-<div class=navigation>
-    <ul>
-            <li><a href="http://xr09.github.io/pages/projects.html">Projects</a> </li>
-            <li><a href="http://xr09.github.io/archives.html">Archive</a> </li>
-            <li><a href="http://xr09.github.io/pages/about.html">About</a> </li>
-    </ul>
-</div>
-<div class=separator></div>        
-        <div class=body>
-    <h1> Archive </h1>
-        <h2>2017</h2>
-        <ul>
-                        <li><a href="http://xr09.github.io/use-smart-solutions.html">Use Smart Solutions</a></li>
-        </ul>
-        <h2>2015</h2>
-        <ul>
-                        <li><a href="http://xr09.github.io/2015.html">2015</a></li>
-        </ul>
-        <h2>2014</h2>
-        <ul>
-                        <li><a href="http://xr09.github.io/ferm-iptables-the-right-way.html">Ferm - IPtables The Right Way</a></li>
-                        <li><a href="http://xr09.github.io/debian-repo-minimal-edition.html">Debian Repo - Minimal Edition</a></li>
-                        <li><a href="http://xr09.github.io/running-the-latest-debmirror-on-centos-5.html">Running The Latest Debmirror On CentOS 5</a></li>
-                        <li><a href="http://xr09.github.io/stripping-down-centos.html">Stripping Down Centos</a></li>
-                        <li><a href="http://xr09.github.io/cron-scheduling-for-the-fancy.html">Cron Scheduling For The Fancy</a></li>
-                        <li><a href="http://xr09.github.io/porting-twentytwelve.html">Porting TwentyTwelve</a></li>
-                        <li><a href="http://xr09.github.io/fast-git-clone.html">Fast Git Clone</a></li>
-                        <li><a href="http://xr09.github.io/new-admin-in-town.html">New Admin In Town</a></li>
-        </ul>
-        <h2>2013</h2>
-        <ul>
-                        <li><a href="http://xr09.github.io/serving-static-folder-with-nginx.html">Serving Static Folder with NGINX</a></li>
-                        <li><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></li>
-                        <li><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></li>
-                        <li><a href="http://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></li>
-        </ul>
-        </div>
-        
-<div class=footer>
-  <p>&copy; Copyright <script language="JavaScript">var date = new Date(); document.write(date.getFullYear());</script> by Manuel Gutierrez</p>
-  <p> Powered by <a href="http://pypi.python.org/pypi/pelican/" target="_blank">Pelican</a>.  
-  </p> 
-  <p>
-    <div class=social style="font-size: 27px;">
-      <ul>
-        <script language="JavaScript">
-          u = 'mgp';
-          s = 'nauta.cu';
-          document.write('<a href=\"mailto:' + u + '@' + s + '\" target=\"_blank\">');
-        </script>
-            <li><i class="icon-envelope icon-large"></i> </li>
-        </a>
-        <a href="https://twitter.com/xr09" target="_blank"> <li> <i class="icon-twitter-sign icon-large"> </li></i> </a>
-        <a href="https://github.com/xr09" target="_blank"> <li> <i class="icon-github-sign icon-large"></i> </li> </a>
-        <a href="http://xr09.github.io/feeds/all.rss.xml" rel="alternate" title="Recent Blog Posts"><li> <i class="icon-rss icon-large"></i> </li></a>
-      </ul>
-    </div>
-  </p>
-</div>    </div>
+<body id="index" class="home">
+        <header id="banner" class="body">
+                <h1><a href="http://xr09.github.io/">DevPad  <strong>clean code, good karma</strong></a></h1>
+                <nav><ul>
+<!--                  -->
+                    <li><a href="http://xr09.github.io/pages/about.html">About</a></li>
+                    <li><a href="http://xr09.github.io/pages/projects.html">Projects</a></li>
+                    <li><a href="http://xr09.github.io/category/server.html">server</a></li>
+                    <li><a href="http://xr09.github.io/category/os.html">os</a></li>
+                    <li><a href="http://xr09.github.io/category/dev.html">dev</a></li>
+                    <li><a href="http://xr09.github.io/category/brainwork.html">brainwork</a></li>
+                </ul>
+                </nav>
+        </header><!-- /#banner -->
+<section id="content" class="body">
+<h1>Archives for DevPad</h1>
+
+<dl>
+    <dt>Thu 09 February 2017</dt>
+    <dd><a href="http://xr09.github.io/responsive-at-last.html">Responsive At Last</a></dd>
+    <dt>Tue 17 January 2017</dt>
+    <dd><a href="http://xr09.github.io/use-smart-solutions.html">Use Smart Solutions</a></dd>
+    <dt>Thu 31 December 2015</dt>
+    <dd><a href="http://xr09.github.io/2015.html">2015</a></dd>
+    <dt>Tue 14 October 2014</dt>
+    <dd><a href="http://xr09.github.io/ferm-iptables-the-right-way.html">Ferm - IPtables The Right Way</a></dd>
+    <dt>Fri 12 September 2014</dt>
+    <dd><a href="http://xr09.github.io/debian-repo-minimal-edition.html">Debian Repo - Minimal Edition</a></dd>
+    <dt>Wed 30 April 2014</dt>
+    <dd><a href="http://xr09.github.io/running-the-latest-debmirror-on-centos-5.html">Running The Latest Debmirror On CentOS 5</a></dd>
+    <dt>Wed 16 April 2014</dt>
+    <dd><a href="http://xr09.github.io/stripping-down-centos.html">Stripping Down Centos</a></dd>
+    <dt>Tue 01 April 2014</dt>
+    <dd><a href="http://xr09.github.io/cron-scheduling-for-the-fancy.html">Cron Scheduling For The Fancy</a></dd>
+    <dt>Fri 07 February 2014</dt>
+    <dd><a href="http://xr09.github.io/porting-twentytwelve.html">Porting TwentyTwelve</a></dd>
+    <dt>Fri 31 January 2014</dt>
+    <dd><a href="http://xr09.github.io/fast-git-clone.html">Fast Git Clone</a></dd>
+    <dt>Wed 29 January 2014</dt>
+    <dd><a href="http://xr09.github.io/new-admin-in-town.html">New Admin In Town</a></dd>
+    <dt>Wed 30 October 2013</dt>
+    <dd><a href="http://xr09.github.io/serving-static-folder-with-nginx.html">Serving Static Folder with NGINX</a></dd>
+    <dt>Fri 04 October 2013</dt>
+    <dd><a href="http://xr09.github.io/bash-rolodex.html">Bash Rolodex</a></dd>
+    <dt>Thu 03 October 2013</dt>
+    <dd><a href="http://xr09.github.io/sed-is-unix.html">sed is unix</a></dd>
+    <dt>Tue 01 October 2013</dt>
+    <dd><a href="http://xr09.github.io/pelican-looks-great.html">Pelican looks great</a></dd>
+</dl>
+</section>
+        <section id="extras" class="body">
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                        </ul>
+                </div><!-- /.social -->
+        </section><!-- /#extras -->
+
+        <footer id="contentinfo" class="body">
+                <p>Copyright &copy; 2017 - Manuel Gutierrez -  Powered by <a href="http://getpelican.com/">Pelican</a></p>
+        </footer><!-- /#contentinfo -->
+
     <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-90554639-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-90554639-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    })();
     </script>
-  </body>
+<script type="text/javascript">
+    var disqus_shortname = 'devpad';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
+</body>
 </html>
