--- a/use-smart-solutions.html
+++ b/use-smart-solutions.html
@@ -67,6 +67,8 @@
                         <ul>
                             <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
+                            <li><a href="https://github.com/xr09">Github</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
