--- a/ferm-iptables-the-right-way.html
+++ b/ferm-iptables-the-right-way.html
@@ -105,6 +105,8 @@ chain FORWARD policy DROP<span class="p">;</span>
                         <ul>
                             <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
+                            <li><a href="https://github.com/xr09">Github</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
