--- a/stripping-down-centos.html
+++ b/stripping-down-centos.html
@@ -115,6 +115,8 @@ chkconfig readahead_later on
                         <ul>
                             <li><a href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
+                            <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
+                            <li><a href="https://github.com/xr09">Github</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
