--- a/drafts/optimization-patterns.html
+++ b/drafts/optimization-patterns.html
@@ -63,6 +63,7 @@ Optimize Optimize Optimize Optimize Optimize Optimize</p>
 
                             <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
                             <li><a href="https://github.com/xr09">Github</a></li>
+                            <li><a id="email" href="mailto:john@example.com">john@example.com</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
@@ -90,5 +91,12 @@ Optimize Optimize Optimize Optimize Optimize Optimize</p>
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
+    <script type="text/javascript">
+        var user = "mgp.xr09",
+        domain = "gmail.com",
+        element = document.getElementById('email');
+        element.innerHTML = user + '@' + domain;
+        element.href = 'mailto:' + user + '@' + domain;
+    </script>
 </body>
 </html>
