--- a/ferm-iptables-the-right-way.html
+++ b/ferm-iptables-the-right-way.html
@@ -105,6 +105,7 @@ chain FORWARD policy DROP<span class="p">;</span>
 
                             <li><a href="https://www.twitter.com/xr09">Twitter</a></li>
                             <li><a href="https://github.com/xr09">Github</a></li>
+                            <li><a id="email" href="mailto:john@example.com">john@example.com</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
@@ -132,5 +133,12 @@ chain FORWARD policy DROP<span class="p">;</span>
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
+    <script type="text/javascript">
+        var user = "mgp.xr09",
+        domain = "gmail.com",
+        element = document.getElementById('email');
+        element.innerHTML = user + '@' + domain;
+        element.href = 'mailto:' + user + '@' + domain;
+    </script>
 </body>
 </html>
