--- a/2015.html
+++ b/2015.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>2015</title>
+        <title>2015 - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/2015.html"/>
+<meta name="description" content="This is my only post this year. Kind of a busy year. I've played a lot with some new technologies, dug deeper with some of the old ones. Below you can read a summary of some of the best stuff …"/>
+<meta property="og:title" content="2015 -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/2015.html" />
+<meta property="og:description" content="This is my only post this year. Kind of a busy year. I've played a lot with some new technologies, dug deeper with some of the old ones. Below you can read a summary of some of the best stuff …" />
+<meta property="article:published_time" content="2015-12-31 12:41:00-05:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="This is my only post this year. Kind of a busy year. I've played a lot with some new technologies, dug deeper with some of the old ones. Below you can read a summary of some of the best stuff …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
