--- a/bash-rolodex.html
+++ b/bash-rolodex.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bash Rolodex</title>
+        <title>Bash Rolodex - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/bash-rolodex.html"/>
+<meta name="description" content="There's been a while since I have a rolodex.txt in my ideas_for_projects directory, although there are several options out there, this is the kind of program nobody resists to reimplement, so here I go. My first idea was a …"/>
+<meta property="og:title" content="Bash Rolodex -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/bash-rolodex.html" />
+<meta property="og:description" content="There's been a while since I have a rolodex.txt in my ideas_for_projects directory, although there are several options out there, this is the kind of program nobody resists to reimplement, so here I go. My first idea was a …" />
+<meta property="article:published_time" content="2013-10-04 08:15:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="There's been a while since I have a rolodex.txt in my ideas_for_projects directory, although there are several options out there, this is the kind of program nobody resists to reimplement, so here I go. My first idea was a …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
