--- a/compiling-the-linux-kernel.html
+++ b/compiling-the-linux-kernel.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Compiling The Linux Kernel</title>
+        <title>Compiling The Linux Kernel - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/compiling-the-linux-kernel.html"/>
+<meta name="description" content="The Little Guide on how to compile the Linux Kernel This works for Debian/Ubuntu and other distros with minor tweaks. apt install build-essential fakeroot libncurses5-dev wget https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.10.2.tar …"/>
+<meta property="og:title" content="Compiling The Linux Kernel -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/compiling-the-linux-kernel.html" />
+<meta property="og:description" content="The Little Guide on how to compile the Linux Kernel This works for Debian/Ubuntu and other distros with minor tweaks. apt install build-essential fakeroot libncurses5-dev wget https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.10.2.tar …" />
+<meta property="article:published_time" content="2017-03-14 09:38:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="The Little Guide on how to compile the Linux Kernel This works for Debian/Ubuntu and other distros with minor tweaks. apt install build-essential fakeroot libncurses5-dev wget https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.10.2.tar …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
