--- a/cron-scheduling-for-the-fancy.html
+++ b/cron-scheduling-for-the-fancy.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cron Scheduling For The Fancy</title>
+        <title>Cron Scheduling For The Fancy - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/cron-scheduling-for-the-fancy.html"/>
+<meta name="description" content="Cron is a powerful tool for a sysadmin, the fact that you are able to run tasks at any time, any day, is amazing. The regular cron is ok for like 99% of the needs, there's no need for anything …"/>
+<meta property="og:title" content="Cron Scheduling For The Fancy -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/cron-scheduling-for-the-fancy.html" />
+<meta property="og:description" content="Cron is a powerful tool for a sysadmin, the fact that you are able to run tasks at any time, any day, is amazing. The regular cron is ok for like 99% of the needs, there's no need for anything …" />
+<meta property="article:published_time" content="2014-04-01 16:42:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Cron is a powerful tool for a sysadmin, the fact that you are able to run tasks at any time, any day, is amazing. The regular cron is ok for like 99% of the needs, there's no need for anything …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
