--- a/porting-twentytwelve.html
+++ b/porting-twentytwelve.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Porting TwentyTwelve</title>
+        <title>Porting TwentyTwelve - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/porting-twentytwelve.html"/>
+<meta name="description" content="I'm working on a port of the TwentyTwelve Wordpress theme for Pelican, right now is in alpha state but progressing incrementally. Despite the amount of work and responsabilities I have at the moment, this little project is a stress relief …"/>
+<meta property="og:title" content="Porting TwentyTwelve -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/porting-twentytwelve.html" />
+<meta property="og:description" content="I'm working on a port of the TwentyTwelve Wordpress theme for Pelican, right now is in alpha state but progressing incrementally. Despite the amount of work and responsabilities I have at the moment, this little project is a stress relief …" />
+<meta property="article:published_time" content="2014-02-07 08:57:00-05:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="I'm working on a port of the TwentyTwelve Wordpress theme for Pelican, right now is in alpha state but progressing incrementally. Despite the amount of work and responsabilities I have at the moment, this little project is a stress relief …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
