--- a/responsive-at-last.html
+++ b/responsive-at-last.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive At Last</title>
+        <title>Responsive At Last - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/responsive-at-last.html"/>
+<meta name="description" content="Finally took the time and upgraded this blog with a responsive theme, this time with a variation of the default theme: BlueIdea. I like a lot how it looks on mobile: clean and simple, lately so many themes out there …"/>
+<meta property="og:title" content="Responsive At Last -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/responsive-at-last.html" />
+<meta property="og:description" content="Finally took the time and upgraded this blog with a responsive theme, this time with a variation of the default theme: BlueIdea. I like a lot how it looks on mobile: clean and simple, lately so many themes out there …" />
+<meta property="article:published_time" content="2017-02-09 11:12:00-05:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Finally took the time and upgraded this blog with a responsive theme, this time with a variation of the default theme: BlueIdea. I like a lot how it looks on mobile: clean and simple, lately so many themes out there …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
