--- a/running-the-latest-debmirror-on-centos-5.html
+++ b/running-the-latest-debmirror-on-centos-5.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Running The Latest Debmirror On CentOS 5</title>
+        <title>Running The Latest Debmirror On CentOS 5 - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/running-the-latest-debmirror-on-centos-5.html"/>
+<meta name="description" content="To sync a deb repo So, today at work we had to download the brand new Ubuntu 14.04, there are two options to do it: apt-mirror and debmirror. The advantage of apt-mirror is the ability to download a repo …"/>
+<meta property="og:title" content="Running The Latest Debmirror On CentOS 5 -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/running-the-latest-debmirror-on-centos-5.html" />
+<meta property="og:description" content="To sync a deb repo So, today at work we had to download the brand new Ubuntu 14.04, there are two options to do it: apt-mirror and debmirror. The advantage of apt-mirror is the ability to download a repo …" />
+<meta property="article:published_time" content="2014-04-30 14:59:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="To sync a deb repo So, today at work we had to download the brand new Ubuntu 14.04, there are two options to do it: apt-mirror and debmirror. The advantage of apt-mirror is the ability to download a repo …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
