--- a/sed-is-unix.html
+++ b/sed-is-unix.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>sed is unix</title>
+        <title>sed is unix - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/sed-is-unix.html"/>
+<meta name="description" content="The UNIX concept of "do one thing and do it well" is so beautiful it's inspiring. Back in 2005 as a beginner Linux user I used vim for everything text related, now I use it relatively less, I just found …"/>
+<meta property="og:title" content="sed is unix -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/sed-is-unix.html" />
+<meta property="og:description" content="The UNIX concept of "do one thing and do it well" is so beautiful it's inspiring. Back in 2005 as a beginner Linux user I used vim for everything text related, now I use it relatively less, I just found …" />
+<meta property="article:published_time" content="2013-10-03 14:23:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="The UNIX concept of "do one thing and do it well" is so beautiful it's inspiring. Back in 2005 as a beginner Linux user I used vim for everything text related, now I use it relatively less, I just found …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
