--- a/debian-repo-minimal-edition.html
+++ b/debian-repo-minimal-edition.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Debian Repo - Minimal Edition</title>
+        <title>Debian Repo - Minimal Edition - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/debian-repo-minimal-edition.html"/>
+<meta name="description" content="Usually a Debian software repository is around 50 GB, it contains lots of software, documentation and debug packages, unless you are providing services to a wide range of clients then is likely you only need a fraction of those packages …"/>
+<meta property="og:title" content="Debian Repo - Minimal Edition -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/debian-repo-minimal-edition.html" />
+<meta property="og:description" content="Usually a Debian software repository is around 50 GB, it contains lots of software, documentation and debug packages, unless you are providing services to a wide range of clients then is likely you only need a fraction of those packages …" />
+<meta property="article:published_time" content="2014-09-12 11:37:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Usually a Debian software repository is around 50 GB, it contains lots of software, documentation and debug packages, unless you are providing services to a wide range of clients then is likely you only need a fraction of those packages …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
