--- a/drafts/iaas-for-the-win.html
+++ b/drafts/iaas-for-the-win.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IaaS For The Win</title>
+        <title>IaaS For The Win - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/drafts/iaas-for-the-win.html"/>
+<meta name="description" content="A few years ago shared hosting was the norm for deploying most applications, very few people had the resources to deploy anything they wanted without restrictions. In the shared hosting model you had to pay accordingly to the platform you …"/>
+<meta property="og:title" content="IaaS For The Win -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/drafts/iaas-for-the-win.html" />
+<meta property="og:description" content="A few years ago shared hosting was the norm for deploying most applications, very few people had the resources to deploy anything they wanted without restrictions. In the shared hosting model you had to pay accordingly to the platform you …" />
+<meta property="article:published_time" content="2015-05-25 11:02:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="A few years ago shared hosting was the norm for deploying most applications, very few people had the resources to deploy anything they wanted without restrictions. In the shared hosting model you had to pay accordingly to the platform you …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
