--- a/drafts/improving-the-wheel.html
+++ b/drafts/improving-the-wheel.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Improving the wheel</title>
+        <title>Improving the wheel - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/drafts/improving-the-wheel.html"/>
+<meta name="description" content="I needed a simple web app for searching users in my company's ldap server, there's already a page for that but its UI/UX is so bad it hurts using it. Let's change that. First, evaluate the current solution."/>
+<meta property="og:title" content="Improving the wheel -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/drafts/improving-the-wheel.html" />
+<meta property="og:description" content="I needed a simple web app for searching users in my company's ldap server, there's already a page for that but its UI/UX is so bad it hurts using it. Let's change that. First, evaluate the current solution." />
+<meta property="article:published_time" content="2013-10-14 15:10:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="I needed a simple web app for searching users in my company's ldap server, there's already a page for that but its UI/UX is so bad it hurts using it. Let's change that. First, evaluate the current solution." />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
