--- a/drafts/optimization-patterns.html
+++ b/drafts/optimization-patterns.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Optimization patterns</title>
+        <title>Optimization patterns - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/drafts/optimization-patterns.html"/>
+<meta name="description" content="Optimize Everything Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize …"/>
+<meta property="og:title" content="Optimization patterns -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/drafts/optimization-patterns.html" />
+<meta property="og:description" content="Optimize Everything Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize …" />
+<meta property="article:published_time" content="2013-09-19 10:59:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Optimize Everything Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize Optimize …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
