--- a/drafts/php-the-elephant-on-the-room.html
+++ b/drafts/php-the-elephant-on-the-room.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PHP: The Elephant On The Room</title>
+        <title>PHP: The Elephant On The Room - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/drafts/php-the-elephant-on-the-room.html"/>
+<meta name="description" content="Why PHP? In one word: hosting. There's an emerging platform I'd love to deploy some apps in, but there is 90% probabilities the thing will be PHP only. Right now there's struggle in my head trying to find a PHP …"/>
+<meta property="og:title" content="PHP: The Elephant On The Room -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/drafts/php-the-elephant-on-the-room.html" />
+<meta property="og:description" content="Why PHP? In one word: hosting. There's an emerging platform I'd love to deploy some apps in, but there is 90% probabilities the thing will be PHP only. Right now there's struggle in my head trying to find a PHP …" />
+<meta property="article:published_time" content="2014-03-27 14:30:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Why PHP? In one word: hosting. There's an emerging platform I'd love to deploy some apps in, but there is 90% probabilities the thing will be PHP only. Right now there's struggle in my head trying to find a PHP …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
