--- a/fast-git-clone.html
+++ b/fast-git-clone.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fast Git Clone</title>
+        <title>Fast Git Clone - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/fast-git-clone.html"/>
+<meta name="description" content="Lots of tutorials nowadays recommend using git clone to get a project's source code, that's fine for little projects but for the big ones is a waste of bandwith, space, and more importantly, of your precious time. Whenever you need …"/>
+<meta property="og:title" content="Fast Git Clone -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/fast-git-clone.html" />
+<meta property="og:description" content="Lots of tutorials nowadays recommend using git clone to get a project's source code, that's fine for little projects but for the big ones is a waste of bandwith, space, and more importantly, of your precious time. Whenever you need …" />
+<meta property="article:published_time" content="2014-01-31 14:07:00-05:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="Lots of tutorials nowadays recommend using git clone to get a project's source code, that's fine for little projects but for the big ones is a waste of bandwith, space, and more importantly, of your precious time. Whenever you need …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
