--- a/ferm-iptables-the-right-way.html
+++ b/ferm-iptables-the-right-way.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ferm - IPtables The Right Way</title>
+        <title>Ferm - IPtables The Right Way - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/ferm-iptables-the-right-way.html"/>
+<meta name="description" content="This is a small post but totally worth it. Just wanted to point out I've finally found the ultimate meta language for managing iptables: ferm. To keep this brief let's say Ferm is to IPtables as C is to ASM …"/>
+<meta property="og:title" content="Ferm - IPtables The Right Way -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/ferm-iptables-the-right-way.html" />
+<meta property="og:description" content="This is a small post but totally worth it. Just wanted to point out I've finally found the ultimate meta language for managing iptables: ferm. To keep this brief let's say Ferm is to IPtables as C is to ASM …" />
+<meta property="article:published_time" content="2014-10-14 14:15:00-04:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="This is a small post but totally worth it. Just wanted to point out I've finally found the ultimate meta language for managing iptables: ferm. To keep this brief let's say Ferm is to IPtables as C is to ASM …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
