--- a/tags.html
+++ b/tags.html
@@ -3,10 +3,15 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DevPad - Tags</title>
+        <title>Tags - DevPad</title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+        <meta name="description" content="Linux, Python, Networking and more"/>
+        <meta property="og:site_name" content="DevPad" />
+        <meta property="og:type" content="article" />
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
