--- a/use-smart-solutions.html
+++ b/use-smart-solutions.html
@@ -3,10 +3,23 @@
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Use Smart Solutions</title>
+        <title>Use Smart Solutions - DevPad </title>
         <link rel="stylesheet" href="http://xr09.github.io/theme/css/main.css" />
         <link href="http://xr09.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="DevPad Atom Feed" />
 
+<link rel="canonical" href="http://xr09.github.io/use-smart-solutions.html"/>
+<meta name="description" content="I refuse to use stupid solutions. Stupid solutions wear you off, make you angry with your work, often you'll find yourself setting due-date to "someday" in order to avoid the hassle. On the other side smart solutions are golden, require …"/>
+<meta property="og:title" content="Use Smart Solutions -- clean code, good karma" />
+<meta property="og:url" content="http://xr09.github.io/use-smart-solutions.html" />
+<meta property="og:description" content="I refuse to use stupid solutions. Stupid solutions wear you off, make you angry with your work, often you'll find yourself setting due-date to "someday" in order to avoid the hassle. On the other side smart solutions are golden, require …" />
+<meta property="article:published_time" content="2017-01-17 14:11:00-05:00" />
+<meta property="article:modified_time" content="" />
+<meta name="twitter:site" content="@xr09" />
+<meta name="twitter:creator" content="@xr09" />
+<meta name="twitter:card" content="I refuse to use stupid solutions. Stupid solutions wear you off, make you angry with your work, often you'll find yourself setting due-date to "someday" in order to avoid the hassle. On the other side smart solutions are golden, require …" />
+
+                
+        
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
