--- a/archives.html
+++ b/archives.html
@@ -33,6 +33,8 @@
 <h1>Archives for DevPad</h1>
 
 <dl>
+    <dt>Tue 21 March 2017</dt>
+    <dd><a href="http://xr09.github.io/gitea-as-personal-git-ui.html">Gitea As Personal Git Ui</a></dd>
     <dt>Tue 14 March 2017</dt>
     <dd><a href="http://xr09.github.io/compiling-the-linux-kernel.html">Compiling The Linux Kernel</a></dd>
     <dt>Thu 09 February 2017</dt>
@@ -94,6 +96,15 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'devpad';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
     <script type="text/javascript">
         var user = "mgp.xr09",
         domain = "gmail.com",
