--- a/drafts/optimization-patterns.html
+++ b/drafts/optimization-patterns.html
@@ -95,6 +95,15 @@ Optimize Optimize Optimize Optimize Optimize Optimize</p>
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'devpad';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
     <script type="text/javascript">
         var user = "mgp.xr09",
         domain = "gmail.com",
