--- a/serving-static-folder-with-nginx.html
+++ b/serving-static-folder-with-nginx.html
@@ -74,6 +74,19 @@ chmod a+rw /var/www/static -R
 <p>-q is for quiet, -O is to redirect the output and the - is an alias to std-out, this way is a shortcut for downloading <em>somescript</em> and running it with bash.</p>
 
     </div><!-- /.entry-content -->
+    <div class="comments">
+      <h2>Comments !</h2>
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        var disqus_identifier = "serving-static-folder-with-nginx.html";
+        var disqus_url = "http://xr09.github.io/serving-static-folder-with-nginx.html";
+        (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//devpad.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+    </div>
 
   </article>
 </section>
@@ -104,6 +117,15 @@ chmod a+rw /var/www/static -R
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'devpad';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
     <script type="text/javascript">
         var user = "mgp.xr09",
         domain = "gmail.com",
