--- a/tags.html
+++ b/tags.html
@@ -38,7 +38,8 @@
         <li><a href="http://xr09.github.io/tag/cron.html">cron</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/debian.html">debian</a> (3)</li>
         <li><a href="http://xr09.github.io/tag/debmirror.html">debmirror</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/git.html">git</a> (1)</li>
+        <li><a href="http://xr09.github.io/tag/git.html">git</a> (2)</li>
+        <li><a href="http://xr09.github.io/tag/ideas.html">ideas</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/job.html">job</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/kernel.html">kernel</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/linux.html">linux</a> (1)</li>
@@ -82,6 +83,15 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'devpad';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
     <script type="text/javascript">
         var user = "mgp.xr09",
         domain = "gmail.com",
