--- a/archives.html
+++ b/archives.html
@@ -34,7 +34,7 @@
 
 <dl>
     <dt>Tue 21 March 2017</dt>
-    <dd><a href="http://xr09.github.io/gitea-as-personal-git-ui.html">Gitea As Personal Git Ui</a></dd>
+    <dd><a href="http://xr09.github.io/gitea-as-a-personal-git-ui.html">Gitea As A Personal Git Ui</a></dd>
     <dt>Tue 14 March 2017</dt>
     <dd><a href="http://xr09.github.io/compiling-the-linux-kernel.html">Compiling The Linux Kernel</a></dd>
     <dt>Thu 09 February 2017</dt>
