--- a/tags.html
+++ b/tags.html
@@ -31,7 +31,7 @@
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for DevPad</h1>        <li><a href="http://xr09.github.io/tag/admin.html">admin</a> (2)</li>
+    <h1>Tags for DevPad</h1>        <li><a href="http://xr09.github.io/tag/admin.html">admin</a> (3)</li>
         <li><a href="http://xr09.github.io/tag/bash.html">bash</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/blog.html">blog</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/centos.html">centos</a> (2)</li>
@@ -39,9 +39,9 @@
         <li><a href="http://xr09.github.io/tag/debian.html">debian</a> (3)</li>
         <li><a href="http://xr09.github.io/tag/debmirror.html">debmirror</a> (2)</li>
         <li><a href="http://xr09.github.io/tag/git.html">git</a> (2)</li>
-        <li><a href="http://xr09.github.io/tag/ideas.html">ideas</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/job.html">job</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/kernel.html">kernel</a> (1)</li>
+        <li><a href="http://xr09.github.io/tag/lifehack.html">lifehack</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/linux.html">linux</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/nginx.html">nginx</a> (1)</li>
         <li><a href="http://xr09.github.io/tag/pelican.html">pelican</a> (3)</li>
